# swagger.yaml
@@ -270,7 +270,7 @@ paths:
           content:
             application/json:
               schema:
-                $ref: "#/components/schemas/CartProducts"
+                $ref: "#/components/schemas/OrderProducts"
         '400':
           description: Data validation error. Check the returned message for details.
           content:
@@ -297,7 +297,7 @@ paths:
                 $ref: "#/components/schemas/Error"
                 
   /cart/{cartId}/{productId}:
-    post:
+    delete:
       tags:
         - cart
       summary: Remove a product.
@@ -345,15 +345,231 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Error"
+
+  /orders:
+    get:
+      tags:
+        - orders
+      summary: Retrieve all orders details.
+      description: Retrieve information about all user orders.
+      operationId: getOrders
+      responses:
+        '200':
+          description: Retrieved all user orders or returned an empty array.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OrderArray"
+        '403':
+          description: The user is not logged in.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: Unexpected error. Check the returned message for details.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
                 
+  /orders/{orderId}:
+    get:
+      tags:
+        - orders
+      summary: Retrieve order details.
+      description: Retrieve information about a specific user orders.
+      operationId: getOrder
+      parameters:
+        - name: orderId
+          in: path
+          description: Numeric ID of an order in the system.
+          required: true
+          schema:
+            type: integer
+            example: 2
+      responses:
+        '200':
+          description: Order retrieved.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/OrderProducts"
+        '403':
+          description: The user is not logged in.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '404':
+          description: An order with the provided IDs could not be found for this user.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"                
+        default:
+          description: Unexpected error. Check the returned message for details.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+                
+  /products:
+    get:
+      tags:
+        - products
+      summary: Retrieve all products details.
+      description: Retrieve information about all products.
+      operationId: getProducts
+      responses:
+        '200':
+          description: Retrieved all products or returned an empty array.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProductInfoArray"
+        default:
+          description: Unexpected error. Check the returned message for details.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+                
+  /products/{productId}:
+    get:
+      tags:
+        - products
+      summary: Retrieve a product's details.
+      description: Retrieve information about a specific product.
+      operationId: getProduct
+      parameters:
+        - name: productId
+          in: path
+          description: Numeric ID of a product in the system.
+          required: true
+          schema:
+            type: integer
+            example: 11
+      responses:
+        '200':
+          description: Product retrieved.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/ProductInfo"
+        '404':
+          description: A product with the provided ID could not be found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"                
+        default:
+          description: Unexpected error. Check the returned message for details.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+                
+  /users/{userId}:
+    get:
+      tags:
+        - users
+      summary: Retrieve a user's details.
+      description: Retrieve information about the current user.
+      operationId: getUser
+      parameters:
+        - name: userId
+          in: path
+          description: Numeric ID of a user in the system.
+          required: true
+          schema:
+            type: integer
+            example: 11
+      responses:
+        '200':
+          description: User details retrieved.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserInfo"
+        '400':
+          description: Data validation error. Check the returned message for details.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '403':
+          description: The user is not logged in.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '404':
+          description: A user with the provided ID could not be found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: Unexpected error. Check the returned message for details.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error" 
+
+    put:
+      tags:
+        - users
+      summary: Update a user's details.
+      description: Updates the current user's details.
+      operationId: updateUser
+      parameters:
+        - name: userId
+          in: path
+          description: Numeric ID of a user in the system.
+          required: true
+          schema:
+            type: integer
+            example: 11
+      responses:
+        '200':
+          description: User updated successfully.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/UserInfo"
+        '400':
+          description: Data validation error. Check the returned message for details.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '403':
+          description: The user is not logged in.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        '404':
+          description: A user with the provided ID could not be found.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"
+        default:
+          description: Unexpected error. Check the returned message for details.
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Error"                 
 components:
   schemas:
     User:
       required:
         - email
         - password
-        - firstName
-        - lastName
+        - first_name
+        - last_name
       type: object
       properties:
         email:
@@ -366,11 +582,11 @@ components:
           example: password123
           pattern: /\s/
           description: Password must not contain spaces.
-        firstName:
+        first_name:
           type: string
           example: John B.
           description: First name must not contain any special characters. Dots and spaces are allowed.
-        lastName:
+        last_name:
           type: string
           example: Doe
           description: Last name must not contain any special characters. Dots and spaces are allowed.
@@ -441,13 +657,14 @@ components:
               quantity:
                 type: integer
                 example: 5
+                
     Product:
       type: object
       required:
-        - itemId
+        - id
         - quantity
       properties:
-        itemId:
+        id:
           type: string
           example: 11
         quantity:
@@ -479,6 +696,96 @@ components:
           type: integer
           example: 890
           
+    Order:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 2
+        status:
+          type: string
+          example: "pending"
+        user_id:
+          type: integer
+          example: 4
+        total_price:
+          type: string
+          example: "9.95"
+          
+    OrderArray:
+      type: array
+      items:
+        $ref: "#/components/schemas/Order"
+        
+    OrderProducts:
+      type: object
+      properties:
+        order:
+          type: object
+          properties:
+            id:
+              type: integer
+              example: 15
+            status:
+              type: string
+              example: "pending"
+            user_id:
+              type: integer
+              example: 13
+            total_price:
+              type: number
+              format: float
+              multipleOf: 0.01
+              example: 9.99
+        products:
+          type: array
+          items:
+            type: object
+            properties:
+              id:
+                type: integer
+                example: 10
+              name:
+                type: string
+                example: Apple
+              quantity:
+                type: integer
+                example: 5  
+                
+    ProductInfo:
+      type: object
+      properties:
+        id:
+          type: integer
+          example: 11
+        name:
+          type: string
+          example: "Caramel Apple Taffy"
+        description:
+          type: string
+          example: "Sweet and chewy taffy flavored like caramel apples, great for fall."
+        price:
+          type: string
+          example: "1.99"
+
+    ProductInfoArray:
+      type: array
+      items:
+        $ref: "#/components/schemas/ProductInfo"
+        
+    UserInfo:
+      type: object
+      properties:
+        email:
+          type: string
+          example: "example@example.com"
+        first_name:
+          type: string
+          example: "John"
+        last_name:
+          type: string
+          example: "Doe"        
+
     Error:
       type: object
       properties:
